# python-sdk

./: .coveragerc  .gitignore  .gitmodules  .pydocstyle.ini  .pylint.ini  CHANGELOG.md  Makefile  README.md  integration-test.py  janky-integration-test.py  mkdocs.yml  pyproject.toml  scent.py  test.py  test_model.py
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: build.yml  publish.yml  releases.yml  semantic.yml  test.yml
docs/: requirements.txt
docs/about/: license.md
instill/: __init__.py  __main__.py
instill/clients/: __init__.py  app.py  artifact.py  base.py  client.py  connector.py  constant.py  instance.py  mgmt.py  model.py  pipeline.py
instill/config/: __init__.py
instill/configuration/: __init__.py
instill/helpers/: Dockerfile  __init__.py  build.py  cli.py  const.py  errors.py  push.py  ray_config.py  ray_helper.py  ray_io.py  test.py  utils.py
instill/helpers/commands/: __init__.py  build.py  init.py  push.py  run.py  utils.py
instill/helpers/docker/: .dockerignore  Dockerfile  Dockerfile.arm  Dockerfile.mlc  Dockerfile.mlc-llm  Dockerfile.transformers  Dockerfile.vllm  Dockerfile.vllm.arm
instill/helpers/init-templates/: .dockerignore  Dockerfile  instill.yaml  model.py
instill/helpers/protobufs/: model_ray_user_defined_pb2.py  model_ray_user_defined_pb2.pyi  model_ray_user_defined_pb2_grpc.py  parse.py  ray_pb2.py  ray_pb2.pyi  ray_pb2_grpc.py  user_defined_pb2.py  user_defined_pb2_grpc.py
instill/protogen/: CHANGELOG.md  README.md
instill/protogen/.github/workflows/: add-issue-to-prj.yml  add-pr-to-prj.yml  releases.yml
instill/protogen/base/metric/v1alpha/: metric_pb2.pyi  metric_service_pb2_grpc.py
instill/protogen/base/mgmt/v1alpha/: metric_pb2.py  metric_pb2.pyi  mgmt_pb2.py  mgmt_pb2.pyi  mgmt_private_service_pb2.py  mgmt_private_service_pb2_grpc.py  (+4 more)
instill/protogen/release-please/: config.json  manifest.json
instill/resources/: __init__.py  component.py  connector.py  connector_ai.py  connector_airbyte.py  connector_blockchain.py  connector_data.py  const.py  errors.py  model.py  operator.py  pipeline.py  recipe.py  resource.py  trigger.py
instill/resources/schema/: airbyte_task_write_destination_input.py  airbyte_task_write_destination_output.py  archetypeai.py  archetypeai_task_describe_input.py  archetypeai_task_describe_output.py  archetypeai_task_summarize_input.py  archetypeai_task_summarize_output.py  archetypeai_task_upload_file_input.py  archetypeai_task_upload_file_output.py  base64_task_decode_input.py  base64_task_decode_output.py  base64_task_encode_input.py  base64_task_encode_output.py  bigquery.py  bigquery_task_insert_input.py  bigquery_task_insert_output.py  end_task_end_input.py  end_task_end_metadata.py  end_task_end_output.py  googlecloudstorage.py  googlecloudstorage_task_upload_input.py  googlecloudstorage_task_upload_output.py  googlesearch.py  googlesearch_task_search_input.py  googlesearch_task_search_output.py  helper.py  huggingface.py  huggingface_task_audio_classification_input.py  huggingface_task_audio_classification_output.py  huggingface_task_conversational_input.py  huggingface_task_conversational_output.py  huggingface_task_fill_mask_input.py  huggingface_task_fill_mask_output.py  huggingface_task_image_classification_input.py  huggingface_task_image_classification_output.py  huggingface_task_image_segmentation_input.py  huggingface_task_image_segmentation_output.py  huggingface_task_image_to_text_input.py  huggingface_task_image_to_text_output.py  huggingface_task_object_detection_input.py  (+120 more)
instill/resources/schema/airbyte/: OAuth2.py  __init__.py
instill/resources/schema/jsons/: airbyte_definitions.json  airbyte_task_write_destination_input.json  airbyte_task_write_destination_output.json  airbyte_tasks.json  archetypeai_definitions.json  archetypeai_task_describe_input.json  archetypeai_task_describe_output.json  archetypeai_task_summarize_input.json  archetypeai_task_summarize_output.json  archetypeai_task_upload_file_input.json  archetypeai_task_upload_file_output.json  archetypeai_tasks.json  base64_definitions.json  base64_task_decode_input.json  base64_task_encode_input.json  base64_task_encode_output.json  base64_tasks.json  bigquery_definitions.json  bigquery_task_insert_input.json  bigquery_task_insert_output.json  bigquery_tasks.json  component.json  end_definitions.json  end_task_end_input.json  end_task_end_metadata.json  end_tasks.json  googlecloudstorage_definitions.json  googlecloudstorage_task_upload_input.json  googlecloudstorage_task_upload_output.json  googlecloudstorage_tasks.json  googlesearch_definitions.json  googlesearch_task_search_input.json  googlesearch_task_search_output.json  googlesearch_tasks.json  huggingface_definitions.json  huggingface_task_audio_classification_output.json  huggingface_task_conversational_input.json  huggingface_task_conversational_output.json  huggingface_task_fill_mask_input.json  huggingface_task_fill_mask_output.json  (+126 more)
instill/tests/: test_cli.py  test_client.py  test_config.py  test_integration.py  test_resources.py  test_utils.py
instill/utils/: error_handler.py  logger.py  process_file.py
instill_sdk/: __init__.py  __main__.py  client.py
instill_sdk/clients/: __init__.py  base.py  client.py  connector.py  mgmt.py  model.py  pipeline.py
instill_sdk/configuration/: __init__.py
instill_sdk/resources/: __init__.py  connector.py  connector_ai.py  connector_blockchain.py  connector_data.py  model.py  pipeline.py
instill_sdk/tests/: test_client.py
instill_sdk/utils/: error_handler.py
notebooks/: asyncio_example.py  create_custom_model.ipynb  create_pipeline.ipynb  model_usage.ipynb  serve_custom_chat_model.ipynb  serve_custom_text_to_image_model.ipynb  serve_github_model.ipynb  story_pipeline.ipynb
release-please/: config.json
samples/tinyllama-cpu/: instill.yaml  model.py
samples/tinyllama-gpu/: instill.yaml  model.py
samples/yolov7-cpu/: instill.yaml  model.py
samples/yolov7-gpu/: instill.yaml  model.py
tests/: conftest.py  test_cli.py  test_client.py  test_integration.py
(+94 files in other folders)
