[tool.poetry]

name = "instill-sdk"
version = "0.11.0"
description = "python sdk for Instill AI products"

packages = [{ include = "instill" }]

license = "MIT"
authors = ["instill-ai <drop@instill.tech>"]

readme = "README.md"
homepage = "https://pypi.org/project/instill-sdk"
documentation = "https://instill-sdk.readthedocs.io"
repository = "https://github.com/instill-ai/python-sdk"

maintainers = ["Heiru Wu <heiru.wu@instill.tech>"]

keywords = []
classifiers = [
  "Development Status :: 1 - Planning",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]

python = ">=3.9,<3.12"
grpcio = "^1.59.0"
pyyaml = "^6.0.1"
numpy = "^1.21.0"
protobuf = "^4.24.2"
types-protobuf = "^4.24.0.1"
types-pyyaml = "^6.0.12.11"
google-api-core = "^2.11.1"
googleapis-common-protos = "^1.60.0"
protoc-gen-openapiv2 = "^0.0.1"
pydantic = ">=1.10.13"
pillow = "^10.1.0"
ray = {version = "2.21.0", extras = ["serve"]}
jsonschema = "^4.20.0"

[tool.poetry.dev-dependencies]

# Formatters
black = "^24.3"
tomli = "*"     # missing 'black' dependency
isort = "^5.10"

# Linters
mypy = "^1.0"
pydocstyle = "^6.1"
pylint = "~2.15"
wrapt = "*"         # missing 'pylint' dependency

# Testing
pytest = "^7.3"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-random = "*"
pytest-cov = "^4.1"
freezegun = "*"

# Reports
coveragespace = "^6.0"

# Documentation
mkdocs = "~1.3"
pygments = "^2.11.1"

# Tooling
pyinstaller = "5.13.1"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^8.10.0"
ipykernel = "^6.28.0"
mypy-protobuf = "^3.5.0"
grpcio-tools = "^1.54.2"
datamodel-code-generator = "^0.25.2"
jsonref = "^1.1.0"

# Publish
twine = "^4.0.2"

[tool.poetry.scripts]
instill = "instill.helpers.cli:cli"

[tool.black]

quiet = true
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | protogen
    | schema
    | protobufs
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]

profile = "black"
skip_glob = ["**/protogen/*", "**/protobufs/*"]

[tool.mypy]
exclude = ['instill/resources/schema']
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

filterwarnings = ["ignore:::.*google", "ignore:::.*pkg_resources*"]

addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
