[tool.poetry]

description = "python sdk for Instill AI products"
name = "instill-sdk"
version = "0.17.2"

packages = [{include = "instill"}]

authors = ["instill-ai <drop@instill-ai.com>"]
license = "MIT"

documentation = "https://instill-sdk.readthedocs.io"
homepage = "https://pypi.org/project/instill-sdk"
readme = "README.md"
repository = "https://github.com/instill-ai/python-sdk"

maintainers = ["Ping-Lin Chang <ping-lin.chang@instill-ai.com>"]

classifiers = [
  "Development Status :: 1 - Planning",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]
keywords = []

[tool.poetry.dependencies]

fastapi = "^0.115.12"
google-api-core = "^2.11.1"
googleapis-common-protos = "^1.60.0"
grpcio = "^1.59.0"
jsonschema = "^4.20.0"
numpy = "^1.21.0"
pillow = "^10.1.0"
pkginfo = "^1.12.1.2"
protobuf = "4.25.3"
protoc-gen-openapiv2 = "^0.0.1"
pydantic = ">=1.10.13"
python = ">3.9.1,<3.12"
pyyaml = "^6.0.1"
ray = "2.47.0"
requests = "2.32.3"
starlette = "^0.46.1"
types-protobuf = "^4.24.0.1"
types-pyyaml = "^6.0.12.11"
types-requests = "2.31.0.6"
urllib3 = "1.26.20"
uvicorn = "^0.34.0"
virtualenv = "^20.30.0"

[tool.poetry.scripts]
instill = "instill.helpers.cli:cli"

[tool.black]

exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | protogen
    | schema
    | protobufs
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
quiet = true

[tool.isort]

profile = "black"
skip_glob = ["**/protogen/*", "**/protobufs/*"]

[tool.mypy]
check_untyped_defs = true
exclude = ['instill/resources/schema']
ignore_missing_imports = true
no_implicit_optional = true

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

filterwarnings = ["ignore:::.*google", "ignore:::.*pkg_resources*"]

addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.group.dev.dependencies]

# Formatters
black = "^24.3" 
isort = "^5.10" 
tomli = "*" # missing 'black' dependency

# Linters
mypy = "^1.0" 
pydocstyle = "^6.1" 
pylint = "~2.15" 
wrapt = "*" # missing 'pylint' dependency

# Testing
freezegun = "*"
pytest = "^7.3"
pytest-cov = "^4.1"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-random = "*"

# Reports
coveragespace = "^6.0"

# Documentation
mkdocs = "~1.3"
pygments = "^2.11.1"

# Tooling
MacFSEvents = {version = "*", platform = "darwin"}
datamodel-code-generator = "^0.25.2"
grpcio-tools = "1.62.0"
ipykernel = "^6.28.0"
ipython = "^8.10.0"
jsonref = "^1.1.0"
mypy-protobuf = "^3.5.0"
pyinstaller = "5.13.1"
pync = {version = "*", platform = "darwin"}
sniffer = "*"

# Publish
twine = "^4.0.2"
